crates/pixi_glob/src/snapshots/pixi__build__glob_hash__test__glob_hash_case_2_satisfiability_ignore_lock.snap
---
source: src/build/glob_hash.rs
expression: snapshot
---
Globs:
- tests/satisfiability/source-dependency/**/*
- !tests/satisfiability/source-dependency/**/*.lock
Hash: c2b3831fa86971ccf7cc697e92b659a3ac92aa3629994e766f2a5ba6648dfca4
Matched files:
- tests/satisfiability/source-dependency/child-package/pixi.toml
- tests/satisfiability/source-dependency/pixi.toml
