crates/pixi_glob/src/snapshots/pixi__build__glob_hash__test__glob_hash_case_3_non_glob.snap
---
source: src/build/glob_hash.rs
expression: snapshot
---
Globs:
- tests/satisfiability/source-dependency/pixi.toml
Hash: 4353d15bbc5c19dfc81721e4b2c05e6af607ffcfcfb3bd17dbb55e737e72b1cf
Matched files:
- tests/satisfiability/source-dependency/pixi.toml
